--- a/aula-8/index.html
+++ b/aula-8/index.html
@@ -20,6 +20,10 @@
 
         <input type="button" id="minus" value="-">
 
+        <input type="button" id="startAnimation" value="Start">
+
+        <input type="button" id="stopAnimation" value="Stop">
+
         <script src="js/index.js"></script>
     </body>
 </html>
