--- a/exercicio-4/index.html
+++ b/exercicio-4/index.html
@@ -89,6 +89,8 @@
             <h2>Números selecionados:</h2>
 
             <div><p id="sorted"></p></div>
+
+            <input type="button" id="reset" value="Limpar">
         </div>
         <script src="js/index.js"></script>
     </body>
