--- a/aula-10/index.html
+++ b/aula-10/index.html
@@ -33,6 +33,8 @@
                     <th>Nome</th>
                     <th>E-mail</th>
                     <th>CPF</th>
+                    <th>Editar</th>
+                    <th>Excluir</th>
                 </tr>
             </thead>
             <tbody></tbody>
