--- a/aula-10/index.html
+++ b/aula-10/index.html
@@ -22,6 +22,10 @@
                 <label for="cpf">CPF:</label>
                 <input type="text" id="cpf">
             </div>
+            <div>
+                <label for="telefone">Telefone:</label>
+                <input type="text" id="telefone">
+            </div>
             <input type="button" value="Salvar" id="save">
         </form>
 
@@ -33,6 +37,7 @@
                     <th>Nome</th>
                     <th>E-mail</th>
                     <th>CPF</th>
+                    <th>Telefone</th>
                     <th>Editar</th>
                     <th>Excluir</th>
                 </tr>
