--- a/aula-14/index.html
+++ b/aula-14/index.html
@@ -9,6 +9,18 @@
     <body>
         <h1>Cursos cadastrados</h1>
 
+        <form>
+            <div>
+                <label>Nome:</label>
+                <input type="text" id="name">
+            </div>
+            <div>
+                <label>Carga Horária:</label>
+                <input type="number" id="workload">
+            </div>
+            <input type="button" value="Salvar" id="addCourseBtn">
+        </form>
+
         <table id="cursos">
             <thead>
                 <tr>
